# Workshop_WindowsCSFML-SFML

./: .gitignore  README.md
csfml_project/: CMakeLists.txt  Makefile  main.c
csfml_project/assets/: help.txt
csfml_project/include/: game.h
csfml_project/src/: click.c  clock.c  create.c  cursor.c  destroy.c  display.c  fill.c  game.c
